# ptsd-template

./: CMakeLists.txt  README.md  build.bat  files.cmake  proposal.md
include/: App.hpp  BackgroundImage.hpp  Character.hpp  GameCharacter.hpp  Global.hpp  ImageCache.hpp  Item.hpp  JumpPage.hpp  Music.hpp  ObjectInformation.hpp  PhaseResourceManager.hpp  StageConfig.hpp  StageObject.hpp  TaskText.hpp
proposal/: architecture_report.md  object_func.md  proposal.md
src/: App.cpp  AppInit.cpp  AppStage.cpp  DebugMode.cpp  GameCharacter.cpp  Global.cpp  JumpPage.cpp  PhaseMainAction.cpp  PhaseResourceManager.cpp  StageConfig.cpp  StageObject.cpp  StageObjectCheck.cpp  StageObjectDisappear.cpp  StageObjectInit.cpp  StageObjectItemUsed.cpp  StageObjectMakeDisappear.cpp  StageObjectShuffle.cpp  StageObjectUpdate.cpp  main.cpp
